--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.8",
+    "bootstrap": "^5.3.2",
     "graphql": "^16.8.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
-    "tailwindcss": "^3.4.0"
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
